<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/toolbar1"
        android:icon="@drawable/ic_android_black_24dp"
        android:orderInCategory="1"
        android:title="@string/toolbar1"
        app:showAsAction="withText"
        />
    <item
        android:id="@+id/search_view_toolbar_second_fragment"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="always"
        android:icon="@drawable/search_view"
        android:title="@string/search"

        />


    <item
        android:id="@+id/toolbar2"
        android:icon="@drawable/ic_launcher_foreground"
        android:orderInCategory="2"
        android:title="@string/toolbar2"
        app:showAsAction="withText" />
    <item
        android:id="@+id/toolbar3"
        android:icon="@drawable/ic_android_black_24dp"
        android:orderInCategory="3"
        android:title="@string/toolbar3"
        app:showAsAction="withText"
         />


</menu>