<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/fragment1"
        android:icon="@android:drawable/star_big_on"
        android:title="@string/first_fragment"
        app:showAsAction="ifRoom"
        />


    <item
        android:id="@+id/fragment2"
        android:icon="@android:drawable/star_big_on"
        android:title="@string/second_fragment"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/fragment3"
        android:icon="@android:drawable/star_big_on"
        android:title="@string/third_fragment"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/fragment4"
        android:icon="@android:drawable/star_big_on"
        android:title="@string/third_fragment"
        app:showAsAction="ifRoom"/>
</menu>