<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/text_fragment3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/view_model_status"
        android:layout_marginTop="15dp"

        />
    <Button
        android:id="@+id/button_3_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/text_fragment3"
        android:layout_marginTop="10dp"
        android:text="@string/press_joke"
        />
    <TextView
        android:id="@+id/text_multi_fragment3"
        app:layout_constraintTop_toBottomOf="@id/button_3_fragment"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/view_model_status"
        android:layout_marginTop="15dp"

        />
    <Button
        android:id="@+id/button_3_fragment_multi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/text_multi_fragment3"
        android:layout_marginTop="10dp"
        android:text="@string/press_on_of_many"
        />
    <Button
        android:id="@+id/button_3_fragment_recycle_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/button_3_fragment_multi"
        android:layout_marginTop="10dp"
        android:text="@string/press_for_recycle"
        />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycle_view_3_fragment"
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@id/button_3_fragment_recycle_view"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"

        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:scrollbars="vertical"
        />


</androidx.constraintlayout.widget.ConstraintLayout>